<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFAFA"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/new_phone_hint" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:paddingEnd="@dimen/dp_16"
        android:paddingStart="@dimen/dp_16"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:counterOverflowTextAppearance="@style/count_over_text"
        app:counterTextAppearance="@style/count_text">

        <com.turingoal.common.widget.ClearEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/rule09"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="@dimen/dp_4"
            android:hint="@string/new_phone"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/bg_btn_orange_selector"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/sp_18" />
</LinearLayout>
