<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fa8"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        android:paddingEnd="@dimen/dp_16"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_16"
        app:counterEnabled="true"
        app:counterMaxLength="24"
        app:counterOverflowTextAppearance="@style/count_over_text"
        app:counterTextAppearance="@style/count_text">

        <com.turingoal.common.widget.ClearEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/ruleAZaz09"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="@dimen/dp_4"
            android:hint="@string/string_login_username"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        android:paddingEnd="@dimen/dp_16"
        android:paddingStart="@dimen/dp_16"
        app:counterEnabled="true"
        app:counterMaxLength="24"
        app:counterOverflowTextAppearance="@style/count_over_text"
        app:counterTextAppearance="@style/count_text">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/ruleAZaz09"
            android:drawablePadding="@dimen/dp_4"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:hint="@string/string_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF">

        <CheckBox
            android:id="@+id/cbRememberPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/string_remember" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBinding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_btn_blue_selector"
        android:enabled="false"
        android:text="@string/binding_user"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/sp_18" />
</LinearLayout>