<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFAFA"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:background="#66FFFFFF"
        android:paddingEnd="@dimen/dp_16"
        android:paddingStart="@dimen/dp_16"
        app:counterEnabled="true"
        app:counterMaxLength="24"
        app:counterOverflowTextAppearance="@style/count_over_text"
        app:counterTextAppearance="@style/count_text">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/ruleAZaz09"
            android:drawablePadding="@dimen/dp_4"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/bg_btn_blue_selector"
        android:enabled="false"
        android:text="@string/string_save"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/sp_18" />

</LinearLayout>